<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecommendListItem">

    <TextView
        android:id="@+id/tv_r_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_r_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="1." />

    <TextView
        android:id="@+id/tv_r_song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_r_song_title"
        app:layout_constraintStart_toEndOf="@+id/tv_r_number"
        app:layout_constraintTop_toTopOf="@+id/tv_r_number"
        tools:text="Falling" />

    <TextView
        android:id="@+id/tv_r_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_r_artist"
        app:layout_constraintStart_toStartOf="@+id/tv_r_song_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_r_song_title"
        tools:text="Harry Styles" />

    <Button
        android:id="@+id/btn_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/btn_options"
        app:layout_constraintBottom_toBottomOf="@+id/tv_r_artist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_r_song_title" />
</androidx.constraintlayout.widget.ConstraintLayout>